--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -92,7 +92,7 @@
                         构建属于你自己的博客应用
                     </h1>
                     <h2 class="subtitle">
-                        AnyEx 是一个快速，轻量级但功能完备，易于部署和升级，拥有良好的定制性的开源博客 API 服务应用程序
+                        AnyEx 是一个快速，轻量级但功能完备，易于部署和升级，拥有良好定制性的开源博客 API 服务应用程序
                     </h2>
                 </div>
             </div>
