--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -48,28 +48,22 @@
 
                         <div class="navbar-item has-dropdown is-hoverable">
                             <a class="navbar-link">
-                                功能
+                                更多
                             </a>
 
                             <div class="navbar-dropdown">
-                                <a class="navbar-item" href="#article">
-                                    文章
+                                <a class="navbar-item" href="#">
+                                    在线测试
                                 </a>
-                                <a class="navbar-item" href="#tag">
-                                    标签
+                                <a class="navbar-item" href="#">
+                                    更新日志
                                 </a>
-                                <a class="navbar-item" href="#category">
-                                    类别
-                                </a>
-                                <a class="navbar-item" href="#comment">
-                                    评论
-                                </a>
-                                <a class="navbar-item" href="#tweet">
-                                    推文
+                                <a class="navbar-item" href="#">
+                                    快速部署
                                 </a>
                                 <hr class="navbar-divider">
-                                <a class="navbar-item" href="#more">
-                                    更多
+                                <a class="navbar-item" href="#">
+                                    联系作者
                                 </a>
                             </div>
                         </div>
@@ -97,13 +91,93 @@
                 </div>
             </div>
         </section>
+        <div class="container">
+            <section class="section">
+                <div class="columns is-centered">
+                    <div class="column is-6 aex-resource">
+                        <div>
+                            <h2 class="title">
+                                <i class="far fa-newspaper" color="#3273dc"></i>
+                                文章
+                            </h2>
+                            <p class="subtitle">
+                                核心资源，向世界分享你的见解
+                            </p>
+                        </div>
+                    </div>
+                    <div class="column is-6 aex-resource">
+                        <div>
+                            <h2 class="title">
+                                <i class="fas fa-align-justify" color="#3273dc"></i>
+                                类别
+                            </h2>
+                            <p class="subtitle">
+                                物以类聚，文章也是一样的
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+            <section class="section">
+                <div class="columns">
+                    <div class="column is-6 aex-resource">
+                        <div>
+                            <h2 class="title">
+                                <i class="fas fa-tags" color="#3273dc"></i>
+                                标签
+                            </h2>
+                            <p class="subtitle">
+                                给文章添点小花吧，想加多少就多少
+                            </p>
+                        </div>
+                    </div>
+                    <div class="column is-6 aex-resource">
+                        <div>
+                            <h2 class="title">
+                                <i class="fas fa-comments" color="#3273dc"></i>
+                                评论
+                            </h2>
+                            <p class="subtitle">
+                                一个崇尚自由的人，没理由不允许大家喷你的文章写得水
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="columns">
+                    <div class="column is-6 aex-resource">
+                        <div>
+                            <h2 class="title">
+                                <i class="fab fa-twitter" color="#3273dc"></i>
+                                推文
+                            </h2>
+                            <p class="subtitle">
+                                记录生活的点滴，分享你今天过得怎么样
+                            </p>
+                        </div>
+                    </div>
+                    <div class="column is-6 aex-resource">
+                        <div>
+                            <h2 class="title">
+                                <i class="fas fa-comments" color="#3273dc"></i>
+                                链接
+                            </h2>
+                            <p class="subtitle">
+                                友情链接、导航链接，或者，自定义类型的链接
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         <footer class="footer">
             <div class="content has-text-centered">
                 <p>
-                    <strong>AnyEx</strong> by <a href="https://github.com/Hentioe">Hentioe</a>. The source code is
-                    licensed
-                    <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                    is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                    <strong>AnyEx</strong> 项目由 <a href="https://github.com/Hentioe">Hentioe (绅士喵)</a> 创建。
+                    源代码使用 <a href="http://opensource.org/licenses/mit-license.php">MIT</a> 许可证。
+                    本网站内容使用 <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a> 许可。
                 </p>
             </div>
         </footer>
