Update website content

--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -86,12 +86,21 @@
                         构建属于你自己的博客应用
                     </h1>
                     <h2 class="subtitle">
-                        AnyEx 是一个快速，轻量级但功能完备，易于部署和升级并拥有良好定制性的提供博客 API 服务的开源软件
+                        AnyEx 是一个快速，轻量级却功能完备，易于部署和升级并拥有良好定制性的提供博客 API 服务的开源软件
                     </h2>
                 </div>
             </div>
         </section>
         <div class="container">
+            <header class="aex-header">
+                <h1 class="title">
+                    资源
+                </h1>
+                <p class="subtitle is-4">
+                    简洁<strong>无用户</strong>的体系架构，六大核心资源构成系统
+                </p>
+            </header>
+            <hr>
             <section class="section">
                 <div class="columns is-centered">
                     <div class="column is-6 aex-resource">
@@ -161,7 +170,7 @@
                     <div class="column is-6 aex-resource">
                         <div>
                             <h2 class="title">
-                                <i class="fas fa-comments" color="#3273dc"></i>
+                                <i class="fas fa-link" color="#3273dc"></i>
                                 链接
                             </h2>
                             <p class="subtitle">
