--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -97,7 +97,7 @@
                     资源
                 </h1>
                 <p class="subtitle is-4">
-                    简洁<strong>无用户</strong>的体系架构，六大核心资源构成系统
+                    简洁<strong>无用户</strong>的体系架构，六大资源构成系统
                 </p>
             </header>
             <hr>
