--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -94,10 +94,10 @@
         <div class="container">
             <header class="aex-header">
                 <h1 class="title">
-                    资源
+                    资源介绍
                 </h1>
                 <p class="subtitle is-4">
-                    简洁<strong>无用户</strong>的体系架构，六大资源构成系统
+                    简洁<strong>无用户</strong>的体系架构，六大资源模块构成系统
                 </p>
             </header>
             <hr>
