--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -29,7 +29,7 @@
 
                 <div id="navbarBasicExample" class="navbar-menu">
                     <div class="navbar-start">
-                        <a class="navbar-item" target="_blank" href="https://github.com/anyex-project/anyex/wiki">
+                        <a class="navbar-item" href="/doc/index.html">
                             <span class="icon has-text-primary">
                                 <i class="fas fa-book"></i>
                             </span>
@@ -52,7 +52,7 @@
                             </a>
 
                             <div class="navbar-dropdown">
-                                <a class="navbar-item" href="#">
+                                <a class="navbar-item" href="/swagger">
                                     在线测试
                                 </a>
                                 <a class="navbar-item" href="#">
