--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -180,6 +180,26 @@
                     </div>
                 </div>
             </section>
+            <hr>
+            <header class="aex-header">
+                <h1 class="title">
+                    开发友好
+                </h1>
+                <p class="subtitle is-4">
+                    使用 OpanAPI 3.1 规范生成供以阅读的静态文档以及能在线测试的动态文档
+                </p>
+            </header>
+            <hr>
+            <section class="section aex-doc-section">
+                <div class="columns is-centered">
+                    <div class="column is-6 aex-resource">
+                        <img src="/images/left_doc.png">
+                    </div>
+                    <div class="column is-6 aex-resource">
+                        <img src="/images/right_doc.png">
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             <div class="content has-text-centered">
