Add Swagger static resources

--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -29,7 +29,7 @@
 
                 <div id="navbarBasicExample" class="navbar-menu">
                     <div class="navbar-start">
-                        <a class="navbar-item" href="/doc/index.html">
+                        <a class="navbar-item" href="/swagger-ui/index.html">
                             <span class="icon has-text-primary">
                                 <i class="fas fa-book"></i>
                             </span>
@@ -52,8 +52,8 @@
                             </a>
 
                             <div class="navbar-dropdown">
-                                <a class="navbar-item" href="/swagger">
-                                    在线测试
+                                <a class="navbar-item" href="/doc/index.html">
+                                    静态文档
                                 </a>
                                 <a class="navbar-item" href="#">
                                     更新日志
@@ -186,7 +186,7 @@
                     开发友好
                 </h1>
                 <p class="subtitle is-4">
-                    使用 OpanAPI 3.1 规范生成供以阅读的静态文档以及能在线测试的动态文档
+                    使用 <strong>OpanAPI-3.1</strong> 规范，用以静态阅读和动态测试的集成文档
                 </p>
             </header>
             <hr>
