--- a/apps/web_server/priv/static/swagger-ui/index.html
+++ b/apps/web_server/priv/static/swagger-ui/index.html
@@ -1,6 +1,6 @@
 <!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
