--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -55,7 +55,7 @@
                                 <a class="navbar-item" href="/doc/index.html">
                                     静态文档
                                 </a>
-                                <a class="navbar-item" href="#">
+                                <a class="navbar-item" href="https://github.com/anyex-project/anyex/blob/master/CHANGELOG.md">
                                     更新日志
                                 </a>
                                 <a class="navbar-item" href="#">
