--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -58,11 +58,8 @@
                                 <a class="navbar-item" target="_blank" href="https://github.com/anyex-project/anyex/blob/master/CHANGELOG.md">
                                     更新日志
                                 </a>
-                                <a class="navbar-item" href="#">
-                                    快速部署
-                                </a>
                                 <hr class="navbar-divider">
-                                <a class="navbar-item" href="#">
+                                <a class="navbar-item" target="_blank" href="https://github.com/anyex-project/anyex/wiki#%E8%81%94%E7%B3%BB%E6%88%91">
                                     联系作者
                                 </a>
                             </div>
