--- a/apps/web_server/priv/static/index.html
+++ b/apps/web_server/priv/static/index.html
@@ -37,6 +37,14 @@
                                 文档
                             </span>
                         </a>
+                        <a class="navbar-item" target="_blank" href="https://github.com/anyex-project/anyex/wiki/0.x-%E5%BC%80%E5%8F%91%E6%8C%87%E5%8D%97">
+                            <span class="icon has-text-link">
+                                <i class="fas fa-book-open"></i>
+                            </span>
+                            <span>
+                                指南
+                            </span>
+                        </a>
                         <a class="navbar-item" target="_blank" href="https://github.com/anyex-project/anyex/issues">
                             <span class="icon has-text-info">
                                 <i class="fas fa-info-circle"></i>
@@ -201,7 +209,7 @@
         <footer class="footer">
             <div class="content has-text-centered">
                 <p>
-                    <strong>AnyEx</strong> 项目由 <a href="https://github.com/Hentioe">Hentioe (绅士喵)</a> 创建。
+                    <strong>AnyEx</strong> 项目由 <a href="https://github.com/Hentioe">Hentioe(绅士喵)</a> 创建。
                     源代码使用 <a href="http://opensource.org/licenses/mit-license.php">MIT</a> 许可证。
                     本网站内容使用 <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a> 许可。
                 </p>
